css/live.css
/* GENERICS //////////////////////////// */
* {
	box-sizing: border-box;
	margin: 0px;
	padding: 0px;
	font: inherit;
}

html {
	font-size: 16px;
	font-size: clamp(14px, 1.2vw, 20px);
}

body {
	width: 100vw;
	/* overflow:hidden;   */
	font-family: Verdana, Geneva, Tahoma, sans-serif;

	-webkit-user-select: none; /* Safari */
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* IE10+/Edge */
	user-select: none; /* Standard */
}

ul {
	list-style-type: none;
}

table {
	border-collapse: collapse;
}

tr.head td,
tr.head th {
	background: rgb(241, 241, 241);
	text-align: center;
	font-weight: bold;
}

input,
select {
	padding: 2px 0.5rem;
	border: 1px solid lightgrey;
}

button {
	padding: 2px 0.5rem;
	cursor: pointer;
}

input,
select:disabled {
	outline: none;
}

/* COLORS//////////////////////////////// */

.IDL {
	background: rgb(51, 87, 83);
}

.RNG {
	background: rgb(76, 176, 80);
	/* background: linear-gradient(0deg, rgb(76, 176, 80) 0%, rgb(76, 176, 80, 0.7) 55%, rgb(76, 176, 80) 100%); */
}

.BDN {
	background: rgb(167, 0, 26);
	/* background: linear-gradient(0deg, rgb(167, 0, 26) 0%, rgb(167, 0, 26, 0.7) 55%, rgb(167, 0, 26) 100%); */
}
.MNT {
	background: RGB(255, 151, 0);
	color: #555;
	/* background: linear-gradient(0deg, rgb(255, 151, 0) 0%, rgb(255, 151, 0, 0.7) 55%, rgb(255, 151, 0) 100%); */
}

.UDF {
	border-top: 1px solid rgb(188, 188, 188, 0.8);
	border-bottom: 1px solid rgb(188, 188, 188, 0.8);
	/* background: linear-gradient(0deg, #dcdada 0%, #f5f1f1 30%, #ffffff 65%, #e2e0e0 100%); */
}

.IDL-block {
	/* background: rgb(51, 87, 83); */
	background: linear-gradient(0deg, rgb(51, 87, 83) 0%, rgba(195, 197, 195, 0.9) 55%, rgb(119, 155, 151) 100%);
	/* background: linear-gradient(0deg, #014d33 0%, #014d3380 55%, #014d33 100%); */
	background: linear-gradient(0deg, #444 0%, #777 55%, #444 100%);
	color: #444;
	/* background:none; */
}

.RNG-block {
	/* background: rgb(76, 176, 80); */
	background: linear-gradient(0deg, #4cb050 0%, #4cb050b3 55%, #4cb050 100%);
	color: #4cb050;
}

.BDN-block {
	background: rgb(167, 0, 26);
	background: linear-gradient(0deg, #a7001a 0%, #a7001ab3 55%, #a7001a 100%);
	color: #a7001a;
}
.MNT-block {
	background: RGB(255, 151, 0);
	background: linear-gradient(0deg, #ff9700 0%, #ff9700b3 55%, #ff9700 100%);
	color: #ff9700;
}

.UDF-block {
	background: linear-gradient(0deg, #c8c8c8 0%, #ffffffb3 55%, #c8c8c8 100%);
	background: none;
	color: #444;
}

/* HEADER /////////////////////////////// */

header {
	width: 100vw;
	height: 50px;
	padding: 0 2vw;
	display: flex;
	justify-content: space-around;
	background: black;
	position: fixed;
	color: white;
	z-index: 10;
}

.dev {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	padding: 5px;
	background: #666;
	position: absolute;
	top: 50px;
}

.section-selector {
	flex-grow: 1;
	display: flex;
	justify-content: space-evenly;
	align-items: center;
}

.tab {
	cursor: pointer;
	text-decoration: none;
	border-radius: 20px;
	padding: 0.25rem 0.5rem;
	display: flex;
	justify-content: center;
	color: white;
}
@media (min-width: 900px) {
	.tab {
		width: 120px;
		cursor: pointer;
		text-decoration: none;
		border-radius: 20px;
		margin: 0px 1rem;
		padding: 0.25rem auto;
	}
}

.tab:hover {
	color: gold;
}

.active-tab,
.active-tab:hover {
	background: gold;
	color: #333;
}

.login,
.user {
	width: 200px;
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	border: 1px solid white;
	align-self: center;
}
@media (max-width: 600px) {
	.login,
	.user {
		display: none;
	}
}

.login input {
	width: 100px;
	height: 30px;
	color: #777;
	border: none;
}

.login button {
	/* width: 70px; */
	height: 30px;
	flex-grow: 1;
	background: black;
	color: white;
	outline: none;
	border: none;
}
.login button:hover {
	background: rgb(56, 56, 56);
}
.login button:active {
	transform: scale(0.9);
}

.section {
	padding: 50px 5vw;
	width: 100%;
	min-height: 100vh;
	flex-grow: 1;
}

@media (max-width: 600px) {
	.section {
		padding: 50px 2vw;
	}
}

/* LIVE  //////////////////////////// LIVE ////////////////////// LIVE //////// */

#live-sec {
	font-size: clamp(14px, 1vw, 16px);
	/* font-size: 15px; */
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	background: rgb(35, 35, 35);
	color: white;
}

.live-bar {
	width: 100%;
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
	/* font-size:75%; */
}

.live-bar > div {
	width: 400px;
	margin: 5px;
	border-radius: 5px;
}

.live-bar input {
	max-width: 100%;
	background: none;
	color: white;
	border: none;
	text-align: center;
	padding: 0;
}

.live-bar table {
	width: 100%;
	border-radius: 7px;
	overflow: hidden;
}

.live-bar tr {
	/* background:yellow; */
	display: flex;
}
.live-bar th {
	background: deepskyblue;
	padding: 7px 10px;
	width: 33.33%;
}
.live-bar td {
	padding: 5px;
	text-align: center;
	width: 33.33%;
}

.live-bar table tr:nth-child(odd) {
	background: #616161;
}
.live-bar table tr:nth-child(even) {
	background: #383838;
}

.live-bar tr td:nth-child(2) {
	border-right: 0.5px solid rgb(255, 255, 255, 0.1);
	border-left: 0.5px solid rgb(255, 255, 255, 0.1);
}

.live-bar tr th:nth-child(2) {
	border-right: 0.5px solid rgb(255, 255, 255, 0.1);
	border-left: 0.5px solid rgb(255, 255, 255, 0.1);
}

.live-bar button {
	background: none;
	border: none;
	color: white;
	outline: none;
}

.incrementor {
	display: flex;
	align-items: center;
}
.incrementor span {
	flex-grow: 1;
	text-align: center;
}

.live-content {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}

.mach {
	width: clamp(120px, 15vw, 165px);
	height: clamp(72px, 9vw, 99px);
	margin: 2px;
	border-radius: 10px;
	overflow: hidden;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: stretch;
	/* box-shadow: 1px 1px rgb(100, 99, 99); */
}

.mach p {
	text-align: center;
}

.mach-remark {
	font-size: 10px;
}

.silo,
.live-dumper {
	border: 1px solid #666;
	color: white;
}

.silo input {
	background: transparent;
	border: none;
	outline: none;
	color: #aaa;
	text-align: center;
}

.live-dumper div {
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.dumper-param {
	color: grey;
}

.inner {
	position: relative;
	width: 100%;
	height: 100%;
	transition: transform 0.2s;
	transform-style: preserve-3d;
	color: white;
}

.front,
.back {
	width: 100%;
	height: 100%;
	position: absolute;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	backface-visibility: hidden;
	padding: 0px 5px;
}

.back {
	transform: rotateY(180deg);
	background: rgb(221, 221, 221);
	color: #333;
}

.back * {
	width: 100%;
}

/* flipper for large screen */
@media (min-width: 600px) {
	.mach:hover .inner {
		transform: rotateY(180deg);
	}
}

/* flipper for small screens */
@media (max-width: 600px) {
	.flip .inner {
		transform: rotateY(180deg);
	}
}

.mach-entry,
.mach-data {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	font-size: 0.85rem;
}

/* @media (max-width: 600px) {
	.mach:hover .inner {
		transform: rotateY(180deg);
	}
} */

/* TREND SECTION \\\\\\\\\\\\\\\ TREND \\\\\\\\\\\\\\\ TREND///////////////*/
#trend-sec {
	padding-top: 75px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	font-size: 12px;
	background: rgb(253, 245, 230);
	color: #444;
	font-weight: bold;
}

.trend-row {
	width: 100%;
	padding: 0px 1vw;
	display: flex;
	flex-direction: column;
	margin-top: 30px;
}

.trend-row .mcname {
	/* position: absolute; */
	max-width: 150px;
	padding: 3px 0px;
	/* pointer-events: none; */
	color: #444;
	font-weight: 700;
	background: linear-gradient(90deg, #c8c8c8 0%, #ffffffb3 55%, #c8c8c8 100%);

	text-align: center;
	border-radius: 5px 5px 0px 0px;
}

.trend-bar-container {
	background: linear-gradient(0deg, #c8c8c8 0%, #ffffffb3 55%, #c8c8c8 100%);
	box-shadow: 2px 5px 5px 0px rgb(172, 165, 155);
}

.mctrend {
	height: 20px;
	display: flex;
	flex-grow: 1;
	/* border-right:5px solid white; */
}

.trend-block {
	height: 100%;
	flex-grow: 1;
	cursor: pointer;
}

.transition-times {
	position: absolute;
	left: -10px;
	font-size: 10px;
	color: #333;

	font-weight: 400;
	display: none;
}

.transition-times.top {
	display: inline-block;
	bottom: 25px;
}
.transition-times.bottom {
	display: inline-block;
	top: 25px;
}

.trend-block:hover {
	/* border: 1px solid yellow; */
}

@media (max-width: 600px) {
	.trend-row {
		width: 100%;
		padding: 0px 1vw;
		display: flex;
		flex-direction: column;
		margin-top: 30px;
	}

	.trend-row .mcname {
		max-width: 80px;
	}

	.mctrend {
		height: 15px;
	}

	.transition-times {
		transform: rotate(-45deg);
	}

	.transition-times.top {
		bottom: 20px;
		left: -5px;
	}
	.transition-times.bottom {
		top: 20px;
		left: -10px;
	}
}

/* DUMPERS /////////////////////////////////////////////////////// */

#dumpers-sec {
	/* padding: 5vw; */
}

.hourly-dumpers {
	width: 100%;
}
#dumper-sec input {
	max-width: 10vw;
	border: 1px solid #ddd;
	background: transparent;
	text-align: right;
}

#dumper-sec input:disabled {
	border: none;
}

/* GRAPHS ///////////////////////////////////////////////////////// */

#crusher-sec,
#dragline-sec,
#dumper-sec,
#shovel-sec {
	/* padding: 5vw 5vw; */
	margin: auto;
	display: flex;
	flex-wrap: wrap;
	font-size: 0.9rem;
}

.chart-container {
	min-height: 400px;
	width: 50%;
	padding: 50px 20px;
}
.table-container {
	min-height: 400px;
	width: 50%;
	padding: 50px 20px;
	display: flex;
	justify-content: center;
	align-items: center;
}

@media (max-width: 1100px) {
	.chart-container {
		width: 100%;
	}
	.table-container {
		width: 100%;
	}
}

table.perf-table {
	width: 100%;
	height: 100%;
	color: #444;
}

.perf-table td,
.perf-table th {
	border: 1px solid #ccc;
	padding: 2px 5px;
	text-align: right;
}

.perf-table th {
	text-align: center;
}
.perf-table tr:nth-child(even) {
	background: white;
}

.perf-table tr.head,
tr.total {
	background: white;
}

/* SHOVEL /////////////////////////////////// */

#shovel-table {
	width: 100%;
}

/* SPECIFICS /////////////// */

.tooltip {
	position: relative;
	display: inline-block;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.tooltip .tooltiptext {
	visibility: hidden;
	width: 80px;
	background-color: #555;
	color: #fff;
	text-align: center;
	border-radius: 6px;
	padding: 5px 0;
	position: absolute;
	z-index: 1;
	bottom: 125%;
	left: 50%;
	margin-left: -40px;
	opacity: 0;
	transition: opacity 0.3s;
	background: #222;
	color: yellow;
}

.tooltip .tooltiptext::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 50%;
	margin-left: -5px;
	border-width: 5px;
	border-style: solid;
	border-color: #222 transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
	visibility: visible;
	opacity: 1;
}

/* /////// scrollbar ////////// */

/* width */
::-webkit-scrollbar {
	width: 2px;
}

/* Track */
::-webkit-scrollbar-track {
	background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: #555;
}

